@@ -2,6 +2,7 @@
 # You can redistribute it and/or modify it under the same terms as Ruby.
 
 require 'utility'
+require 'numberformat'
 
 class DccManager < OSX::NSObject
   include OSX
@@ -397,41 +398,5 @@ class FileReceiverCell < OSX::NSCell
   
   def ftime(sec)
     NumberFormat.format_time(sec)
-  end
-end
-
-
-module NumberFormat
-  def self.format_time(sec)
-    min = sec / 60
-    sec %= 60
-    hour = min / 60
-    min %= 60
-    if hour >= 1
-      sprintf("%d:%02d:%02d", hour, min, sec)
-    else
-      sprintf("%d:%02d", min, sec)
-    end
-  end
-  
-  def self.format_size(bytes)
-    kb = bytes / 1024.0
-    mb = kb / 1024.0
-    gb = mb / 1024.0
-    if gb >= 1
-      if gb >= 10
-        sprintf("%d GB", gb)
-      else
-        sprintf("%1.1f GB", gb)
-      end
-    elsif mb >= 1
-      if mb >= 10
-        sprintf("%d MB", mb)
-      else
-        sprintf("%1.1f MB", mb)
-      end
-    else
-      sprintf("%d KB", kb)
-    end
   end
 end
